--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 :root {
   --size-base: 16px;
+  --main-header-height: 3.5rem;
   --main-sidebar-width: 17rem;
   --border-radius-base: 0.25rem;
 
